.provarCaches/00D6C0000000xA6UAI/objects/sked__Account_Resource_Score__c.object
<CustomObject>
    <fields>
        <fullName>sked__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Resource Scores</relationshipLabel>
        <relationshipName>Account_Resource_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Blacklisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blacklisted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>sked__Resource__c</referenceTo>
        <relationshipLabel>Account Resource Scores</relationshipLabel>
        <relationshipName>Account_Resource_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sked__Whitelisted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Whitelisted</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Resource Score</label>
    <nameField>
        <displayFormat>ARS-{0000}</displayFormat>
        <label>Account Resource Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Resource Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>